Criar usuário do tipo paciente.
