# src/config/swagger/swagger.json
@@ -1,18 +1,137 @@
 {
-    "swagger": "2.0",
-    "info": {
-        "version": "1.0.0",
-        "title": "SVD System API",
-        "description": "API do sistema SVD System, um cartão de vacinas digital."
+  "swagger": "2.0",
+  "info": {
+    "version": "1.0.0",
+    "title": "SVD System API",
+    "description": "API do sistema SVD System, um cartão de vacinas digital."
+  },
+  "basePath": "/api",
+  "schemes": ["https", "http"],
+  "consumes": ["application/json"],
+  "produces": ["application/json"],
+  "paths": {
+    "/users": {
+      "post": {
+        "tags": ["Usuários"],
+        "summary": "Criar um novo usuário.",
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "description": "Usuário para ser salvo.",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "produces": ["application/json"],
+        "responses": {
+          "200": {
+            "description": "Usuário criado com ID.",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "User": {
+      "properties": {
+        "id": {
+          "type": "number",
+          "uniqueItems": true,
+          "description": "ID do usuário"
+        },
+        "firstName": {
+          "type": "string",
+          "required": true,
+          "description": "Nome"
+        },
+        "lastName": {
+          "type": "string",
+          "required": true,
+          "description": "Sobrenome"
+        },
+        "cpf": {
+          "type": "string",
+          "uniqueItems": true,
+          "required": true,
+          "pattern": "12345678901",
+          "description": "CPF do usuário (somente dígitos)"
+        },
+        "birhtDate": {
+          "type": "string",
+          "required": true,
+          "pattern": "1990-12-31",
+          "description": "Data de nascimento (YYYY-MM-DD)"
+        },
+        "phoneNumber": {
+          "type": "string",
+          "required": true,
+          "pattern": "1199999999",
+          "description": "Nº de telefone (somente dígitos com DDD)"
+        },
+        "address": {
+          "type": "string",
+          "required": false,
+          "description": "Endereço"
+        },
+        "addressNumber": {
+          "type": "string",
+          "required": false,
+          "description": "Nº da residência"
+        },
+        "cep": {
+          "type": "string",
+          "required": false,
+          "pattern": "12345678",
+          "description": "CEP (somente dígitos)"
+        },
+        "email": {
+          "type": "string",
+          "uniqueItems": true,
+          "required": true,
+          "pattern": "usuario@email.com",
+          "description": "Email"
+        },
+        "city": {
+          "type": "string",
+          "required": true,
+          "description": "Município"
+        },
+        "state": {
+          "type": "string",
+          "required": true,
+          "pattern": "UF",
+          "description": "Estado (UF)"
+        },
+        "professionalOccupation": {
+          "type": "string",
+          "required": false,
+          "description": "Profissão"
+        },
+        "role": {
+          "type": "string",
+          "required": true,
+          "description": "Tipo de usuário",
+          "default": "PACIENTE",
+          "enum": ["PACIENTE", "COLABORADOR", "ADMINISTRADOR"]
+        },
+        "password": {
+          "type": "string",
+          "required": true,
+          "description": "Senha do usuário (informada somente ao criar o usuário)"
+        }
+      }
     },
-    "basePath": "/api",
-    "schemes": [
-        "https", "http"
-    ],
-    "consumes": [
-        "application/json"
-    ],
-    "produces": [
-        "application/json"
-    ]
+    "Users": {
+      "type": "array",
+      "items": {
+        "title": "User",
+        "$ref": "#/definitions/User"
+      }
+    }
+  }
 }
