# src/routes/user.js
@@ -1,0 +1,6 @@
+const router = require('express').Router();
+const { userController } = require('../controllers/index');
+
+router.post('/', userController.create);
+
+module.exports = router;
